common.gradle:  test JMonkeyEngine 3.5.0-alpha1, target Java 8+