@@ -4,11 +4,11 @@ apply plugin: 'java'
 
 ext { // current versions of various libraries:
     heartVersion = '7.1.1-SNAPSHOT'
-    jme3Version = '3.4.0-stable'
+    jme3Version = '3.5.0-alpha1'
 }
 
-sourceCompatibility = '1.7'
-targetCompatibility = '1.7'
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_8
 
 tasks.withType(JavaCompile) { // Java compile-time options:
     options.compilerArgs << '-Xdiags:verbose'
@@ -16,15 +16,13 @@ tasks.withType(JavaCompile) { // Java compile-time options:
     //options.deprecation = true
     options.encoding = 'UTF-8'
 }
+
 tasks.withType(JavaExec) { // Java runtime options:
-    classpath sourceSets.main.runtimeClasspath
-    //debug true
     enableAssertions true
     //jvmArgs '-verbose:gc'
     //jvmArgs '-Xbatch'
     //jvmArgs '-Xms512m', '-Xmx512m'
     //jvmArgs '-XX:+PrintCompilation'
-    //jvmArgs '-XX:+UseConcMarkSweepGC'
     jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
 }
 
